# Cinema_Arrangement_System

./: .gitignore  Admin Info.h  Admin Info.hpp  Arrangements.h  Arrangements.hpp  Audience Info.h  Audience Info.hpp  Basic Information.h  Basic Information.hpp  CMakeLists.txt  Readme.md  User Information.h  Welcome.c  Welcome.cpp  bing2.md  general_action.h  halls&tickets.h  main.cpp  welcome.cpp
nlohmann/: json.hpp
